[project]
name = "pycrawler"
version = "0.1.0"
description = ""
authors = [
    {name = "mikey",email = "mikeyu@al88tw.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pymongo (>=4.13.2,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "timezonefinder (>=7.0.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
